@@ -1,5 +1,10 @@
 2009-07-08  Emilio Meschi  <emilio.meschi@cern.ch>
 
+	* tag V00-12-10
+	* added parameter for resourcetable timeout and increased default to 12 s 
+
+2009-07-08  Emilio Meschi  <emilio.meschi@cern.ch>
+
 	* tag V00-12-09
 	* fix for 64-bit compilation
 
